--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ collections:
     permalink: /leathercraft/:path/
 
 # Build settings
-theme: minima
+remote_theme: thedevslot/WhatATheme
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
